--- a/src/RoomAssignment/Add_Room.form
+++ b/src/RoomAssignment/Add_Room.form
@@ -100,47 +100,43 @@
                           <EmptySpace max="32767" attributes="0"/>
                           <Component id="btnCancel" min="-2" pref="70" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblID" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtID" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="32767" attributes="0"/>
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="lblRoom" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="txtRoom" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
-                          </Group>
-                      </Group>
                       <Group type="102" attributes="0">
                           <Group type="103" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="0" attributes="0">
-                                  <Component id="txtEndTime" min="-2" pref="114" max="-2" attributes="0"/>
-                                  <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="btnEndTime" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Component id="lblEndTime" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="lblError" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Group type="102" alignment="0" attributes="0">
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="lblSection" alignment="0" min="-2" max="-2" attributes="0"/>
                                       <Component id="txtSection" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
-                                      <Component id="lblStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Group type="102" alignment="0" attributes="0">
-                                          <Component id="txtStartTime" min="-2" pref="114" max="-2" attributes="0"/>
-                                          <EmptySpace max="-2" attributes="0"/>
-                                          <Component id="btnStartTime" min="-2" max="-2" attributes="0"/>
-                                      </Group>
                                       <Component id="lblDayOfTheWeek" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cbDayOfTheWeek" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                      <Component id="lblID" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtID" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="txtEndTime" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                              <Component id="lblEndTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="lblStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="txtStartTime" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                          </Group>
+                                          <EmptySpace max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="btnEndTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              <Component id="btnStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                      </Group>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
+                                      <Component id="lblRoom" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="txtRoom" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                                       <Component id="txtSubject" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                                       <Component id="lblSubject" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="lblTeacher" alignment="0" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cbTeacher" min="-2" pref="114" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
-                              <Component id="cbDayOfTheWeek" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          <EmptySpace min="0" pref="10" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace max="-2" attributes="0"/>
@@ -152,18 +148,18 @@
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
+                      <Group type="102" attributes="0">
                           <Component id="lblID" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txtID" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <Group type="102" alignment="1" attributes="0">
+                      <Group type="102" attributes="0">
                           <Component id="lblRoom" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="txtRoom" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Group type="102" alignment="1" attributes="0">
                           <Component id="lblSection" min="-2" max="-2" attributes="0"/>
@@ -176,25 +172,35 @@
                           <Component id="txtSubject" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                  <Component id="lblDayOfTheWeek" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="lblDayOfTheWeek" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="lblTeacher" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="cbDayOfTheWeek" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblStartTime" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="btnStartTime" alignment="0" max="32767" attributes="0"/>
-                      <Component id="txtStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="cbDayOfTheWeek" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="cbTeacher" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblEndTime" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="txtEndTime" alignment="0" max="32767" attributes="0"/>
-                      <Component id="btnEndTime" alignment="0" min="-2" pref="22" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                          <Component id="btnStartTime" min="-2" pref="22" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
+                          <Component id="btnEndTime" min="-2" pref="22" max="-2" attributes="0"/>
+                      </Group>
+                      <Group type="102" attributes="0">
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="lblStartTime" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="txtStartTime" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="lblEndTime" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="txtEndTime" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
-                  <EmptySpace max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="btnSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                       <Component id="btnCancel" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
@@ -391,6 +397,27 @@
                 <StringItem index="5" value="Saturday"/>
                 <StringItem index="6" value=""/>
               </StringArray>
+            </Property>
+          </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JLabel" name="lblTeacher">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Century Gothic" size="12" style="1"/>
+            </Property>
+            <Property name="text" type="java.lang.String" value="Teacher"/>
+          </Properties>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="cbTeacher">
+          <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Century Gothic" size="11" style="0"/>
+            </Property>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="0"/>
             </Property>
           </Properties>
           <AuxValues>
