--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -768,63 +768,75 @@
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="spRAMShowRoom" pref="819" max="32767" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
-                              <Component id="btnRAMAddNew" min="-2" pref="85" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="btnRAMDeleteRoom" min="-2" pref="96" max="-2" attributes="0"/>
-                          </Group>
-                          <Component id="lblRAMRoomManagement" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="lblRAMError" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Group type="102" alignment="0" attributes="0">
+                          <Component id="spRAMShowRoom" pref="818" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblRAMStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Component id="txtRAMStartTime" min="-2" pref="114" max="-2" attributes="0"/>
+                                      <Component id="btnRAMAddNew" min="-2" pref="85" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="btnRAMStartTime" min="-2" max="-2" attributes="0"/>
+                                      <Component id="btnRAMDeleteRoom" min="-2" pref="96" max="-2" attributes="0"/>
                                   </Group>
+                                  <Component id="lblRAMRoomManagement" alignment="0" min="-2" max="-2" attributes="0"/>
+                                  <Component id="lblRAMError" alignment="0" min="-2" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="lblRAMID" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="txtRAMID" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lblRAMID" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txtRAMID" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lblRAMRoom" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txtRAMRoom" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Component id="lblRAMStartTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="txtRAMStartTime" min="-2" pref="114" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="btnRAMStartTime" min="-2" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="lblRAMRoom" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="txtRAMRoom" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="txtRAMEndTime" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                                  <Component id="lblRAMEndTime" alignment="0" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="btnRAMEndTime" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace min="-2" pref="124" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="lblRAMDayOfTheWeek" max="32767" attributes="0"/>
+                                                  <Component id="cbRAMDayOfTheWeek" min="-2" pref="95" max="-2" attributes="0"/>
+                                              </Group>
+                                          </Group>
+                                          <Group type="102" attributes="0">
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="txtRAMSubject" min="-2" pref="114" max="-2" attributes="0"/>
+                                                  <Component id="lblRAMSubject" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="separate" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lblRAMSection" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txtRAMSection" min="-2" pref="114" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                                              <Group type="103" groupAlignment="0" attributes="0">
+                                                  <Component id="lblRAMTeacher" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="txtRAMTeacher" alignment="0" min="-2" pref="114" max="-2" attributes="0"/>
+                                              </Group>
+                                              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                                              <Component id="btnRAMSearch" min="-2" pref="70" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="btnRAMSave" min="-2" pref="70" max="-2" attributes="0"/>
+                                          </Group>
                                       </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" attributes="0">
-                                      <Component id="txtRAMEndTime" min="-2" pref="114" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="btnRAMEndTime" min="-2" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="lblRAMEndTime" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Group type="102" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txtRAMSubject" min="-2" pref="114" max="-2" attributes="0"/>
-                                          <Component id="lblRAMSubject" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="lblRAMSection" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          <Component id="txtRAMSection" min="-2" pref="114" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                          <Component id="lblRAMDayOfTheWeek" max="32767" attributes="0"/>
-                                          <Component id="cbRAMDayOfTheWeek" max="32767" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-                                      <Component id="btnRAMSearch" min="-2" pref="70" max="-2" attributes="0"/>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="btnRAMSave" min="-2" pref="70" max="-2" attributes="0"/>
-                                  </Group>
-                              </Group>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
@@ -836,7 +848,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="lblRAMRoomManagement" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="lblRAMID" min="-2" max="-2" attributes="0"/>
@@ -852,24 +864,24 @@
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="txtRAMSubject" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="txtRAMSection" alignment="3" min="-2" max="-2" attributes="0"/>
-                                  <Component id="cbRAMDayOfTheWeek" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="lblRAMDayOfTheWeek" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
-                                  <Component id="btnRAMSearch" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                                  <Component id="btnRAMSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                              </Group>
+                          <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                              <Component id="btnRAMSearch" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                              <Component id="btnRAMSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="lblRAMRoom" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="txtRAMRoom" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="lblRAMTeacher" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="txtRAMTeacher" min="-2" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
                               <Component id="lblRAMStartTime" min="-2" max="-2" attributes="0"/>
@@ -887,6 +899,11 @@
                                   <Component id="btnRAMEndTime" max="32767" attributes="0"/>
                               </Group>
                           </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="lblRAMDayOfTheWeek" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="28" pref="28" max="-2" attributes="0"/>
+                          </Group>
+                          <Component id="cbRAMDayOfTheWeek" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="28" pref="28" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -896,7 +913,7 @@
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="lblRAMError" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="spRAMShowRoom" pref="301" max="32767" attributes="0"/>
+                      <Component id="spRAMShowRoom" pref="297" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -929,10 +946,10 @@
                         <Column editable="false" title="Room" type="java.lang.String"/>
                         <Column editable="false" title="Subject" type="java.lang.String"/>
                         <Column editable="false" title="Section" type="java.lang.String"/>
+                        <Column editable="false" title="Teacher" type="java.lang.String"/>
                         <Column editable="false" title="Days of the Week" type="java.lang.String"/>
                         <Column editable="false" title="Start Time" type="java.lang.String"/>
                         <Column editable="false" title="End Time" type="java.lang.String"/>
-                        <Column editable="false" title="Teacher" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -1203,6 +1220,21 @@
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
               </AuxValues>
+            </Component>
+            <Component class="javax.swing.JLabel" name="lblRAMTeacher">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="12" style="1"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Teacher"/>
+              </Properties>
+            </Component>
+            <Component class="javax.swing.JTextField" name="txtRAMTeacher">
+              <Properties>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Century Gothic" size="12" style="0"/>
+                </Property>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
@@ -1517,7 +1549,7 @@
                           <Font name="Century Gothic" size="12" style="0"/>
                         </Property>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="7" rowCount="4">
+                          <Table columnCount="10" rowCount="4">
                             <Column editable="false" title="ID" type="java.lang.String"/>
                             <Column editable="false" title="Username" type="java.lang.String"/>
                             <Column editable="false" title="First Name" type="java.lang.String"/>
@@ -1525,6 +1557,9 @@
                             <Column editable="false" title="Password" type="java.lang.String"/>
                             <Column editable="false" title="Department" type="java.lang.String"/>
                             <Column editable="false" title="Roles" type="java.lang.String"/>
+                            <Column editable="false" title="Email" type="java.lang.String"/>
+                            <Column editable="false" title="Contact No." type="java.lang.String"/>
+                            <Column editable="false" title="Address" type="java.lang.String"/>
                           </Table>
                         </Property>
                         <Property name="opaque" type="boolean" value="false"/>
@@ -1627,7 +1662,7 @@
                         <StringItem index="0" value="Teacher"/>
                         <StringItem index="1" value="Program Head"/>
                         <StringItem index="2" value="Administrator"/>
-                        <StringItem index="3" value=" "/>
+                        <StringItem index="3" value=""/>
                       </StringArray>
                     </Property>
                   </Properties>
