--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -970,15 +970,13 @@
                           <EmptySpace pref="38" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="btnRAMSearch" pref="27" max="32767" attributes="0"/>
-                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                  <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="txtRAMID" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
-                                      <Component id="lblRAMID" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="btnRAMSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                                      <Component id="btnRAMDeleteRoom" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                                  </Group>
-                                  <Component id="txtRAMSearch" max="32767" attributes="0"/>
+                              <Group type="103" alignment="1" groupAlignment="3" attributes="0">
+                                  <Component id="txtRAMID" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
+                                  <Component id="lblRAMID" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="btnRAMSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
+                                  <Component id="btnRAMDeleteRoom" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                               </Group>
+                              <Component id="txtRAMSearch" alignment="1" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="spRAMShowRoom" pref="261" max="32767" attributes="0"/>
@@ -1637,11 +1635,11 @@
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtMUserID">
                   <Properties>
-                    <Property name="editable" type="boolean" value="false"/>
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Century Gothic" size="12" style="0"/>
                     </Property>
                     <Property name="toolTipText" type="java.lang.String" value="UserID only allows updating and deleting of information."/>
+                    <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnMUserSave">
